// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`error-found has a cause 1`] = `

<div>
  <section class="flex grow flex-col items-center min-h-[80svh] bg-white dark:bg-black justify-center">
    <div class="relative flex flex-col items-center justify-center -mt-32">
      <div class="relative flex flex-col gap-8">
        <div class="absolute inset-0 bg-gradient-radial from-white/0 dark:from-black/0 via-transparent dark:to-black to-white z-[2]">
        </div>
        <div class="flex gap-8 opacity-50">
          <div class="relative flex flex-col gap-2">
            <div class="w-[175px] h-[100px] border-[1px] border-neutral-400 dark:border-neutral-800 rounded-sm bg-neutral-400/10 dark:bg-neutral-800/10 flex">
              <div class="w-1/4 bg-neutral-700/25 border-r-[1px] border-neutral-700/50 flex flex-col justify-between px-[3px] py-[3px]">
                <div>
                  <div class="w-full h-[7px] bg-neutral-700/50 rounded-[2px]">
                  </div>
                  <div class="flex items-center gap-1 mt-1.5">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="w-2/3 h-[5px] bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                  <div class="flex items-center gap-1 mt-1">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="w-1/3 h-[5px] bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                </div>
                <div>
                  <div class="size-[5px] rouned-[1px] bg-neutral-700/60">
                  </div>
                </div>
              </div>
              <div class="flex w-full flex-col px-[6px] py-[3px]">
                <div class="w-1/4 h-[6px] bg-neutral-700/60 rounded-[1px]">
                </div>
                <div class="flex w-full justify-between gap-1 mt-2">
                  <div class="w-1/3 h-[24px] border-[1px] border-neutral-400/90 dark:border-neutral-800/90 bg-neutral-400/60 dark:bg-neutral-800/60">
                  </div>
                  <div class="w-1/3 h-[24px] border-[1px] border-neutral-400/90 dark:border-neutral-800/90 bg-neutral-400/60 dark:bg-neutral-800/60">
                  </div>
                  <div class="w-1/3 h-[24px] border-[1px] border-neutral-400/90 dark:border-neutral-800/90 bg-neutral-400/60 dark:bg-neutral-800/60">
                  </div>
                </div>
              </div>
            </div>
            <div class="w-[80px] h-[12px] bg-neutral-200 dark:bg-neutral-900/80 rounded-[2px]">
            </div>
          </div>
          <div class="relative flex flex-col gap-2">
            <div class="w-[175px] h-[100px] border-[1px] border-neutral-400 dark:border-neutral-800 rounded-sm bg-neutral-400/10 dark:bg-neutral-800/10 flex">
              <div class="flex flex-col items-center justify-between px-[1.6px] py-[3px] w-[10px] bg-neutral-400/25 dark:bg-neutral-700/25 border-r-[1px] border-neutral-400/50 dark:border-neutral-700/50">
                <div class="flex flex-col items-center justify-center">
                  <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                  </div>
                  <div class="flex flex-col items-center justify-center mt-1.5 gap-1">
                    <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                    <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                </div>
                <div class="flex items-center justify-center">
                  <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                  </div>
                </div>
              </div>
              <div class="flex flex-col w-full px-[6px] py-[3px]">
                <div class="w-1/4 h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                </div>
                <div class="flex items-center justify-between mt-1.5">
                  <div class="flex items-center justify-center gap-1">
                    <div class="w-[25px] h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                    <div class="w-[12px] h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                    <div class="w-[6px] h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                  <div class="flex items-center justify-center gap-1">
                    <div class="w-[20px] h-[6px] bg-neutral-900/60 dark:bg-neutral-500/60 rounded-[1px]">
                    </div>
                  </div>
                </div>
                <div class="flex flex-col mt-2 gap-1.5 w-full">
                  <div class="w-full h-[8px] bg-neutral-400/20 dark:bg-neutral-700/20 border-[0.75px] border-neutral-400/70 dark:border-neutral-700/70 rounded-[1px]">
                  </div>
                  <div class="w-full h-[8px] bg-neutral-400/20 dark:bg-neutral-700/20 border-[0.75px] border-neutral-400/70 dark:border-neutral-700/70 rounded-[1px]">
                  </div>
                  <div class="w-full h-[8px] bg-neutral-400/20 dark:bg-neutral-700/20 border-[0.75px] border-neutral-400/70 dark:border-neutral-700/70 rounded-[1px]">
                  </div>
                </div>
              </div>
            </div>
            <div class="w-[60px] h-[12px] bg-neutral-200 dark:bg-neutral-900/80 rounded-[2px]">
            </div>
          </div>
          <div class="relative flex flex-col gap-2">
            <div class="w-[175px] h-[100px] border-[1px] border-neutral-400 dark:border-neutral-800 rounded-sm bg-neutral-400/10 dark:bg-neutral-800/10 flex">
              <div class="w-1/4 bg-neutral-700/25 border-r-[1px] border-neutral-700/50 flex flex-col justify-between px-[3px] py-[3px]">
                <div>
                  <div class="w-full h-[7px] bg-neutral-700/50 rounded-[2px]">
                  </div>
                  <div class="flex items-center gap-1 mt-1.5">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="w-2/3 h-[5px] bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                  <div class="flex items-center gap-1 mt-1">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="w-1/3 h-[5px] bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                </div>
                <div>
                  <div class="size-[5px] rouned-[1px] bg-neutral-700/60">
                  </div>
                </div>
              </div>
              <div class="flex w-full flex-col px-[6px] py-[3px]">
                <div class="w-1/4 h-[6px] bg-neutral-700/60 rounded-[1px]">
                </div>
                <div class="flex w-full justify-between gap-1 mt-2">
                  <div class="w-1/3 h-[24px] border-[1px] border-neutral-400/90 dark:border-neutral-800/90 bg-neutral-400/60 dark:bg-neutral-800/60">
                  </div>
                  <div class="w-1/3 h-[24px] border-[1px] border-neutral-400/90 dark:border-neutral-800/90 bg-neutral-400/60 dark:bg-neutral-800/60">
                  </div>
                  <div class="w-1/3 h-[24px] border-[1px] border-neutral-400/90 dark:border-neutral-800/90 bg-neutral-400/60 dark:bg-neutral-800/60">
                  </div>
                </div>
              </div>
            </div>
            <div class="w-[80px] h-[12px] bg-neutral-200 dark:bg-neutral-900/80 rounded-[2px]">
            </div>
          </div>
        </div>
        <div class="flex gap-8 opacity-80">
          <div class="relative flex flex-col gap-2">
            <div class="w-[175px] h-[100px] border-[1px] border-neutral-400 dark:border-neutral-800 rounded-sm bg-neutral-400/10 dark:bg-neutral-800/10 flex">
              <div class="w-1/4 bg-neutral-700/25 border-r-[1px] border-neutral-700/50 flex flex-col justify-between px-[3px] py-[3px]">
                <div>
                  <div class="w-full h-[7px] bg-neutral-700/50 rounded-[2px]">
                  </div>
                  <div class="flex items-center gap-1 mt-1.5">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="w-2/3 h-[5px] bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                  <div class="flex items-center gap-1 mt-1">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="w-1/3 h-[5px] bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                </div>
                <div>
                  <div class="size-[5px] rouned-[1px] bg-neutral-700/60">
                  </div>
                </div>
              </div>
              <div class="flex w-full flex-col px-[6px] py-[3px]">
                <div class="w-1/4 h-[6px] bg-neutral-700/60 rounded-[1px]">
                </div>
                <div class="flex w-full justify-between gap-1 mt-2">
                  <div class="w-1/3 h-[24px] border-[1px] border-neutral-400/90 dark:border-neutral-800/90 bg-neutral-400/60 dark:bg-neutral-800/60">
                  </div>
                  <div class="w-1/3 h-[24px] border-[1px] border-neutral-400/90 dark:border-neutral-800/90 bg-neutral-400/60 dark:bg-neutral-800/60">
                  </div>
                  <div class="w-1/3 h-[24px] border-[1px] border-neutral-400/90 dark:border-neutral-800/90 bg-neutral-400/60 dark:bg-neutral-800/60">
                  </div>
                </div>
              </div>
            </div>
            <div class="w-[80px] h-[12px] bg-neutral-200 dark:bg-neutral-900/80 rounded-[2px]">
            </div>
          </div>
          <div class="relative flex flex-col gap-2">
            <div class="w-[175px] h-[100px] border-[1px] border-red-800 rounded-sm bg-red-700/10 flex items-center justify-center">
              <div class="size-8 bg-red-500/30 rounded-sm flex items-center justify-center">
                <gui-triangle-alert-icon
                  classname="text-red-500"
                  size="16"
                >
                </gui-triangle-alert-icon>
              </div>
            </div>
            <div class="w-[100px] h-[12px] bg-neutral-200 dark:bg-neutral-900/80 rounded-[2px]">
            </div>
          </div>
          <div class="relative flex flex-col gap-2">
            <div class="w-[175px] h-[100px] border-[1px] border-neutral-400 dark:border-neutral-800 rounded-sm bg-neutral-400/10 dark:bg-neutral-800/10 flex">
              <div class="flex flex-col items-center justify-between px-[1.6px] py-[3px] w-[10px] bg-neutral-400/25 dark:bg-neutral-700/25 border-r-[1px] border-neutral-400/50 dark:border-neutral-700/50">
                <div class="flex flex-col items-center justify-center">
                  <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                  </div>
                  <div class="flex flex-col items-center justify-center mt-1.5 gap-1">
                    <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                    <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                </div>
                <div class="flex items-center justify-center">
                  <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                  </div>
                </div>
              </div>
              <div class="flex flex-col w-full px-[6px] py-[3px]">
                <div class="w-1/4 h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                </div>
                <div class="flex items-center justify-between mt-1.5">
                  <div class="flex items-center justify-center gap-1">
                    <div class="w-[25px] h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                    <div class="w-[12px] h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                    <div class="w-[6px] h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                  <div class="flex items-center justify-center gap-1">
                    <div class="w-[20px] h-[6px] bg-neutral-900/60 dark:bg-neutral-500/60 rounded-[1px]">
                    </div>
                  </div>
                </div>
                <div class="flex flex-col mt-2 gap-1.5 w-full">
                  <div class="w-full h-[8px] bg-neutral-400/20 dark:bg-neutral-700/20 border-[0.75px] border-neutral-400/70 dark:border-neutral-700/70 rounded-[1px]">
                  </div>
                  <div class="w-full h-[8px] bg-neutral-400/20 dark:bg-neutral-700/20 border-[0.75px] border-neutral-400/70 dark:border-neutral-700/70 rounded-[1px]">
                  </div>
                  <div class="w-full h-[8px] bg-neutral-400/20 dark:bg-neutral-700/20 border-[0.75px] border-neutral-400/70 dark:border-neutral-700/70 rounded-[1px]">
                  </div>
                </div>
              </div>
            </div>
            <div class="w-[60px] h-[12px] bg-neutral-200 dark:bg-neutral-900/80 rounded-[2px]">
            </div>
          </div>
        </div>
        <div class="flex gap-8 opacity-50">
          <div class="relative flex flex-col gap-2">
            <div class="w-[175px] h-[100px] border-[1px] border-neutral-400 dark:border-neutral-800 rounded-sm bg-neutral-400/10 dark:bg-neutral-800/10 flex">
              <div class="flex flex-col items-center justify-between px-[1.6px] py-[3px] w-[10px] bg-neutral-400/25 dark:bg-neutral-700/25 border-r-[1px] border-neutral-400/50 dark:border-neutral-700/50">
                <div class="flex flex-col items-center justify-center">
                  <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                  </div>
                  <div class="flex flex-col items-center justify-center mt-1.5 gap-1">
                    <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                    <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                </div>
                <div class="flex items-center justify-center">
                  <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                  </div>
                </div>
              </div>
              <div class="flex flex-col w-full px-[6px] py-[3px]">
                <div class="w-1/4 h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                </div>
                <div class="flex items-center justify-between mt-1.5">
                  <div class="flex items-center justify-center gap-1">
                    <div class="w-[25px] h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                    <div class="w-[12px] h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                    <div class="w-[6px] h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                  <div class="flex items-center justify-center gap-1">
                    <div class="w-[20px] h-[6px] bg-neutral-900/60 dark:bg-neutral-500/60 rounded-[1px]">
                    </div>
                  </div>
                </div>
                <div class="flex flex-col mt-2 gap-1.5 w-full">
                  <div class="w-full h-[8px] bg-neutral-400/20 dark:bg-neutral-700/20 border-[0.75px] border-neutral-400/70 dark:border-neutral-700/70 rounded-[1px]">
                  </div>
                  <div class="w-full h-[8px] bg-neutral-400/20 dark:bg-neutral-700/20 border-[0.75px] border-neutral-400/70 dark:border-neutral-700/70 rounded-[1px]">
                  </div>
                  <div class="w-full h-[8px] bg-neutral-400/20 dark:bg-neutral-700/20 border-[0.75px] border-neutral-400/70 dark:border-neutral-700/70 rounded-[1px]">
                  </div>
                </div>
              </div>
            </div>
            <div class="w-[60px] h-[12px] bg-neutral-200 dark:bg-neutral-900/80 rounded-[2px]">
            </div>
          </div>
          <div class="relative flex flex-col gap-2">
            <div class="w-[175px] h-[100px] border-[1px] border-neutral-400 dark:border-neutral-800 rounded-sm bg-neutral-400/10 dark:bg-neutral-800/10 flex">
              <div class="w-1/4 bg-neutral-700/25 border-r-[1px] border-neutral-700/50 flex flex-col justify-between px-[3px] py-[3px]">
                <div>
                  <div class="w-full h-[7px] bg-neutral-700/50 rounded-[2px]">
                  </div>
                  <div class="flex items-center gap-1 mt-1.5">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="w-2/3 h-[5px] bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                  <div class="flex items-center gap-1 mt-1">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="w-1/3 h-[5px] bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                </div>
                <div>
                  <div class="size-[5px] rouned-[1px] bg-neutral-700/60">
                  </div>
                </div>
              </div>
              <div class="flex w-full flex-col px-[6px] py-[3px]">
                <div class="w-1/4 h-[6px] bg-neutral-700/60 rounded-[1px]">
                </div>
                <div class="flex w-full justify-between gap-1 mt-2">
                  <div class="w-1/3 h-[24px] border-[1px] border-neutral-400/90 dark:border-neutral-800/90 bg-neutral-400/60 dark:bg-neutral-800/60">
                  </div>
                  <div class="w-1/3 h-[24px] border-[1px] border-neutral-400/90 dark:border-neutral-800/90 bg-neutral-400/60 dark:bg-neutral-800/60">
                  </div>
                  <div class="w-1/3 h-[24px] border-[1px] border-neutral-400/90 dark:border-neutral-800/90 bg-neutral-400/60 dark:bg-neutral-800/60">
                  </div>
                </div>
              </div>
            </div>
            <div class="w-[80px] h-[12px] bg-neutral-200 dark:bg-neutral-900/80 rounded-[2px]">
            </div>
          </div>
          <div class="relative flex flex-col gap-2">
            <div class="w-[175px] h-[100px] border-[1px] border-neutral-400 dark:border-neutral-800 rounded-sm bg-neutral-400/10 dark:bg-neutral-800/10 flex">
              <div class="flex flex-col items-center justify-between px-[1.6px] py-[3px] w-[10px] bg-neutral-400/25 dark:bg-neutral-700/25 border-r-[1px] border-neutral-400/50 dark:border-neutral-700/50">
                <div class="flex flex-col items-center justify-center">
                  <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                  </div>
                  <div class="flex flex-col items-center justify-center mt-1.5 gap-1">
                    <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                    <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                </div>
                <div class="flex items-center justify-center">
                  <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                  </div>
                </div>
              </div>
              <div class="flex flex-col w-full px-[6px] py-[3px]">
                <div class="w-1/4 h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                </div>
                <div class="flex items-center justify-between mt-1.5">
                  <div class="flex items-center justify-center gap-1">
                    <div class="w-[25px] h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                    <div class="w-[12px] h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                    <div class="w-[6px] h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                  <div class="flex items-center justify-center gap-1">
                    <div class="w-[20px] h-[6px] bg-neutral-900/60 dark:bg-neutral-500/60 rounded-[1px]">
                    </div>
                  </div>
                </div>
                <div class="flex flex-col mt-2 gap-1.5 w-full">
                  <div class="w-full h-[8px] bg-neutral-400/20 dark:bg-neutral-700/20 border-[0.75px] border-neutral-400/70 dark:border-neutral-700/70 rounded-[1px]">
                  </div>
                  <div class="w-full h-[8px] bg-neutral-400/20 dark:bg-neutral-700/20 border-[0.75px] border-neutral-400/70 dark:border-neutral-700/70 rounded-[1px]">
                  </div>
                  <div class="w-full h-[8px] bg-neutral-400/20 dark:bg-neutral-700/20 border-[0.75px] border-neutral-400/70 dark:border-neutral-700/70 rounded-[1px]">
                  </div>
                </div>
              </div>
            </div>
            <div class="w-[60px] h-[12px] bg-neutral-200 dark:bg-neutral-900/80 rounded-[2px]">
            </div>
          </div>
        </div>
      </div>
      <div class="flex flex-col items-center justify-center gap-1 -mt-32">
        <h4 class="text-xl font-semibold z-[2]">
          Something went wrong
        </h4>
        <p class="text-sm text-neutral-500 text-center z-[2]">
          Failed because of...
        </p>
        <div class="flex gap-3 mt-3 z-[2]">
          <gui-button variant="outline">
            Back
          </gui-button>
          <gui-button>
            <span>
              Dashboard
            </span>
            <gui-arrow-right-icon>
            </gui-arrow-right-icon>
          </gui-button>
        </div>
      </div>
      <div class="absolute -bottom-6 h-[150px] -left-6 -right-6 z-[1] bg-gradient-radial from-white dark:from-black dark:to-black/0 to-white/0">
      </div>
    </div>
  </section>
</div>

`;

exports[`render default 1`] = `

<div>
  <section class="flex grow flex-col items-center min-h-[80svh] bg-white dark:bg-black justify-center">
    <div class="relative flex flex-col items-center justify-center -mt-32">
      <div class="relative flex flex-col gap-8">
        <div class="absolute inset-0 bg-gradient-radial from-white/0 dark:from-black/0 via-transparent dark:to-black to-white z-[2]">
        </div>
        <div class="flex gap-8 opacity-50">
          <div class="relative flex flex-col gap-2">
            <div class="w-[175px] h-[100px] border-[1px] border-neutral-400 dark:border-neutral-800 rounded-sm bg-neutral-400/10 dark:bg-neutral-800/10 flex">
              <div class="w-1/4 bg-neutral-700/25 border-r-[1px] border-neutral-700/50 flex flex-col justify-between px-[3px] py-[3px]">
                <div>
                  <div class="w-full h-[7px] bg-neutral-700/50 rounded-[2px]">
                  </div>
                  <div class="flex items-center gap-1 mt-1.5">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="w-2/3 h-[5px] bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                  <div class="flex items-center gap-1 mt-1">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="w-1/3 h-[5px] bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                </div>
                <div>
                  <div class="size-[5px] rouned-[1px] bg-neutral-700/60">
                  </div>
                </div>
              </div>
              <div class="flex w-full flex-col px-[6px] py-[3px]">
                <div class="w-1/4 h-[6px] bg-neutral-700/60 rounded-[1px]">
                </div>
                <div class="flex w-full justify-between gap-1 mt-2">
                  <div class="w-1/3 h-[24px] border-[1px] border-neutral-400/90 dark:border-neutral-800/90 bg-neutral-400/60 dark:bg-neutral-800/60">
                  </div>
                  <div class="w-1/3 h-[24px] border-[1px] border-neutral-400/90 dark:border-neutral-800/90 bg-neutral-400/60 dark:bg-neutral-800/60">
                  </div>
                  <div class="w-1/3 h-[24px] border-[1px] border-neutral-400/90 dark:border-neutral-800/90 bg-neutral-400/60 dark:bg-neutral-800/60">
                  </div>
                </div>
              </div>
            </div>
            <div class="w-[80px] h-[12px] bg-neutral-200 dark:bg-neutral-900/80 rounded-[2px]">
            </div>
          </div>
          <div class="relative flex flex-col gap-2">
            <div class="w-[175px] h-[100px] border-[1px] border-neutral-400 dark:border-neutral-800 rounded-sm bg-neutral-400/10 dark:bg-neutral-800/10 flex">
              <div class="flex flex-col items-center justify-between px-[1.6px] py-[3px] w-[10px] bg-neutral-400/25 dark:bg-neutral-700/25 border-r-[1px] border-neutral-400/50 dark:border-neutral-700/50">
                <div class="flex flex-col items-center justify-center">
                  <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                  </div>
                  <div class="flex flex-col items-center justify-center mt-1.5 gap-1">
                    <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                    <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                </div>
                <div class="flex items-center justify-center">
                  <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                  </div>
                </div>
              </div>
              <div class="flex flex-col w-full px-[6px] py-[3px]">
                <div class="w-1/4 h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                </div>
                <div class="flex items-center justify-between mt-1.5">
                  <div class="flex items-center justify-center gap-1">
                    <div class="w-[25px] h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                    <div class="w-[12px] h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                    <div class="w-[6px] h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                  <div class="flex items-center justify-center gap-1">
                    <div class="w-[20px] h-[6px] bg-neutral-900/60 dark:bg-neutral-500/60 rounded-[1px]">
                    </div>
                  </div>
                </div>
                <div class="flex flex-col mt-2 gap-1.5 w-full">
                  <div class="w-full h-[8px] bg-neutral-400/20 dark:bg-neutral-700/20 border-[0.75px] border-neutral-400/70 dark:border-neutral-700/70 rounded-[1px]">
                  </div>
                  <div class="w-full h-[8px] bg-neutral-400/20 dark:bg-neutral-700/20 border-[0.75px] border-neutral-400/70 dark:border-neutral-700/70 rounded-[1px]">
                  </div>
                  <div class="w-full h-[8px] bg-neutral-400/20 dark:bg-neutral-700/20 border-[0.75px] border-neutral-400/70 dark:border-neutral-700/70 rounded-[1px]">
                  </div>
                </div>
              </div>
            </div>
            <div class="w-[60px] h-[12px] bg-neutral-200 dark:bg-neutral-900/80 rounded-[2px]">
            </div>
          </div>
          <div class="relative flex flex-col gap-2">
            <div class="w-[175px] h-[100px] border-[1px] border-neutral-400 dark:border-neutral-800 rounded-sm bg-neutral-400/10 dark:bg-neutral-800/10 flex">
              <div class="w-1/4 bg-neutral-700/25 border-r-[1px] border-neutral-700/50 flex flex-col justify-between px-[3px] py-[3px]">
                <div>
                  <div class="w-full h-[7px] bg-neutral-700/50 rounded-[2px]">
                  </div>
                  <div class="flex items-center gap-1 mt-1.5">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="w-2/3 h-[5px] bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                  <div class="flex items-center gap-1 mt-1">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="w-1/3 h-[5px] bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                </div>
                <div>
                  <div class="size-[5px] rouned-[1px] bg-neutral-700/60">
                  </div>
                </div>
              </div>
              <div class="flex w-full flex-col px-[6px] py-[3px]">
                <div class="w-1/4 h-[6px] bg-neutral-700/60 rounded-[1px]">
                </div>
                <div class="flex w-full justify-between gap-1 mt-2">
                  <div class="w-1/3 h-[24px] border-[1px] border-neutral-400/90 dark:border-neutral-800/90 bg-neutral-400/60 dark:bg-neutral-800/60">
                  </div>
                  <div class="w-1/3 h-[24px] border-[1px] border-neutral-400/90 dark:border-neutral-800/90 bg-neutral-400/60 dark:bg-neutral-800/60">
                  </div>
                  <div class="w-1/3 h-[24px] border-[1px] border-neutral-400/90 dark:border-neutral-800/90 bg-neutral-400/60 dark:bg-neutral-800/60">
                  </div>
                </div>
              </div>
            </div>
            <div class="w-[80px] h-[12px] bg-neutral-200 dark:bg-neutral-900/80 rounded-[2px]">
            </div>
          </div>
        </div>
        <div class="flex gap-8 opacity-80">
          <div class="relative flex flex-col gap-2">
            <div class="w-[175px] h-[100px] border-[1px] border-neutral-400 dark:border-neutral-800 rounded-sm bg-neutral-400/10 dark:bg-neutral-800/10 flex">
              <div class="w-1/4 bg-neutral-700/25 border-r-[1px] border-neutral-700/50 flex flex-col justify-between px-[3px] py-[3px]">
                <div>
                  <div class="w-full h-[7px] bg-neutral-700/50 rounded-[2px]">
                  </div>
                  <div class="flex items-center gap-1 mt-1.5">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="w-2/3 h-[5px] bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                  <div class="flex items-center gap-1 mt-1">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="w-1/3 h-[5px] bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                </div>
                <div>
                  <div class="size-[5px] rouned-[1px] bg-neutral-700/60">
                  </div>
                </div>
              </div>
              <div class="flex w-full flex-col px-[6px] py-[3px]">
                <div class="w-1/4 h-[6px] bg-neutral-700/60 rounded-[1px]">
                </div>
                <div class="flex w-full justify-between gap-1 mt-2">
                  <div class="w-1/3 h-[24px] border-[1px] border-neutral-400/90 dark:border-neutral-800/90 bg-neutral-400/60 dark:bg-neutral-800/60">
                  </div>
                  <div class="w-1/3 h-[24px] border-[1px] border-neutral-400/90 dark:border-neutral-800/90 bg-neutral-400/60 dark:bg-neutral-800/60">
                  </div>
                  <div class="w-1/3 h-[24px] border-[1px] border-neutral-400/90 dark:border-neutral-800/90 bg-neutral-400/60 dark:bg-neutral-800/60">
                  </div>
                </div>
              </div>
            </div>
            <div class="w-[80px] h-[12px] bg-neutral-200 dark:bg-neutral-900/80 rounded-[2px]">
            </div>
          </div>
          <div class="relative flex flex-col gap-2">
            <div class="w-[175px] h-[100px] border-[1px] border-red-800 rounded-sm bg-red-700/10 flex items-center justify-center">
              <div class="size-8 bg-red-500/30 rounded-sm flex items-center justify-center">
                <gui-triangle-alert-icon
                  classname="text-red-500"
                  size="16"
                >
                </gui-triangle-alert-icon>
              </div>
            </div>
            <div class="w-[100px] h-[12px] bg-neutral-200 dark:bg-neutral-900/80 rounded-[2px]">
            </div>
          </div>
          <div class="relative flex flex-col gap-2">
            <div class="w-[175px] h-[100px] border-[1px] border-neutral-400 dark:border-neutral-800 rounded-sm bg-neutral-400/10 dark:bg-neutral-800/10 flex">
              <div class="flex flex-col items-center justify-between px-[1.6px] py-[3px] w-[10px] bg-neutral-400/25 dark:bg-neutral-700/25 border-r-[1px] border-neutral-400/50 dark:border-neutral-700/50">
                <div class="flex flex-col items-center justify-center">
                  <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                  </div>
                  <div class="flex flex-col items-center justify-center mt-1.5 gap-1">
                    <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                    <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                </div>
                <div class="flex items-center justify-center">
                  <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                  </div>
                </div>
              </div>
              <div class="flex flex-col w-full px-[6px] py-[3px]">
                <div class="w-1/4 h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                </div>
                <div class="flex items-center justify-between mt-1.5">
                  <div class="flex items-center justify-center gap-1">
                    <div class="w-[25px] h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                    <div class="w-[12px] h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                    <div class="w-[6px] h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                  <div class="flex items-center justify-center gap-1">
                    <div class="w-[20px] h-[6px] bg-neutral-900/60 dark:bg-neutral-500/60 rounded-[1px]">
                    </div>
                  </div>
                </div>
                <div class="flex flex-col mt-2 gap-1.5 w-full">
                  <div class="w-full h-[8px] bg-neutral-400/20 dark:bg-neutral-700/20 border-[0.75px] border-neutral-400/70 dark:border-neutral-700/70 rounded-[1px]">
                  </div>
                  <div class="w-full h-[8px] bg-neutral-400/20 dark:bg-neutral-700/20 border-[0.75px] border-neutral-400/70 dark:border-neutral-700/70 rounded-[1px]">
                  </div>
                  <div class="w-full h-[8px] bg-neutral-400/20 dark:bg-neutral-700/20 border-[0.75px] border-neutral-400/70 dark:border-neutral-700/70 rounded-[1px]">
                  </div>
                </div>
              </div>
            </div>
            <div class="w-[60px] h-[12px] bg-neutral-200 dark:bg-neutral-900/80 rounded-[2px]">
            </div>
          </div>
        </div>
        <div class="flex gap-8 opacity-50">
          <div class="relative flex flex-col gap-2">
            <div class="w-[175px] h-[100px] border-[1px] border-neutral-400 dark:border-neutral-800 rounded-sm bg-neutral-400/10 dark:bg-neutral-800/10 flex">
              <div class="flex flex-col items-center justify-between px-[1.6px] py-[3px] w-[10px] bg-neutral-400/25 dark:bg-neutral-700/25 border-r-[1px] border-neutral-400/50 dark:border-neutral-700/50">
                <div class="flex flex-col items-center justify-center">
                  <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                  </div>
                  <div class="flex flex-col items-center justify-center mt-1.5 gap-1">
                    <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                    <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                </div>
                <div class="flex items-center justify-center">
                  <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                  </div>
                </div>
              </div>
              <div class="flex flex-col w-full px-[6px] py-[3px]">
                <div class="w-1/4 h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                </div>
                <div class="flex items-center justify-between mt-1.5">
                  <div class="flex items-center justify-center gap-1">
                    <div class="w-[25px] h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                    <div class="w-[12px] h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                    <div class="w-[6px] h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                  <div class="flex items-center justify-center gap-1">
                    <div class="w-[20px] h-[6px] bg-neutral-900/60 dark:bg-neutral-500/60 rounded-[1px]">
                    </div>
                  </div>
                </div>
                <div class="flex flex-col mt-2 gap-1.5 w-full">
                  <div class="w-full h-[8px] bg-neutral-400/20 dark:bg-neutral-700/20 border-[0.75px] border-neutral-400/70 dark:border-neutral-700/70 rounded-[1px]">
                  </div>
                  <div class="w-full h-[8px] bg-neutral-400/20 dark:bg-neutral-700/20 border-[0.75px] border-neutral-400/70 dark:border-neutral-700/70 rounded-[1px]">
                  </div>
                  <div class="w-full h-[8px] bg-neutral-400/20 dark:bg-neutral-700/20 border-[0.75px] border-neutral-400/70 dark:border-neutral-700/70 rounded-[1px]">
                  </div>
                </div>
              </div>
            </div>
            <div class="w-[60px] h-[12px] bg-neutral-200 dark:bg-neutral-900/80 rounded-[2px]">
            </div>
          </div>
          <div class="relative flex flex-col gap-2">
            <div class="w-[175px] h-[100px] border-[1px] border-neutral-400 dark:border-neutral-800 rounded-sm bg-neutral-400/10 dark:bg-neutral-800/10 flex">
              <div class="w-1/4 bg-neutral-700/25 border-r-[1px] border-neutral-700/50 flex flex-col justify-between px-[3px] py-[3px]">
                <div>
                  <div class="w-full h-[7px] bg-neutral-700/50 rounded-[2px]">
                  </div>
                  <div class="flex items-center gap-1 mt-1.5">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="w-2/3 h-[5px] bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                  <div class="flex items-center gap-1 mt-1">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="w-1/3 h-[5px] bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                </div>
                <div>
                  <div class="size-[5px] rouned-[1px] bg-neutral-700/60">
                  </div>
                </div>
              </div>
              <div class="flex w-full flex-col px-[6px] py-[3px]">
                <div class="w-1/4 h-[6px] bg-neutral-700/60 rounded-[1px]">
                </div>
                <div class="flex w-full justify-between gap-1 mt-2">
                  <div class="w-1/3 h-[24px] border-[1px] border-neutral-400/90 dark:border-neutral-800/90 bg-neutral-400/60 dark:bg-neutral-800/60">
                  </div>
                  <div class="w-1/3 h-[24px] border-[1px] border-neutral-400/90 dark:border-neutral-800/90 bg-neutral-400/60 dark:bg-neutral-800/60">
                  </div>
                  <div class="w-1/3 h-[24px] border-[1px] border-neutral-400/90 dark:border-neutral-800/90 bg-neutral-400/60 dark:bg-neutral-800/60">
                  </div>
                </div>
              </div>
            </div>
            <div class="w-[80px] h-[12px] bg-neutral-200 dark:bg-neutral-900/80 rounded-[2px]">
            </div>
          </div>
          <div class="relative flex flex-col gap-2">
            <div class="w-[175px] h-[100px] border-[1px] border-neutral-400 dark:border-neutral-800 rounded-sm bg-neutral-400/10 dark:bg-neutral-800/10 flex">
              <div class="flex flex-col items-center justify-between px-[1.6px] py-[3px] w-[10px] bg-neutral-400/25 dark:bg-neutral-700/25 border-r-[1px] border-neutral-400/50 dark:border-neutral-700/50">
                <div class="flex flex-col items-center justify-center">
                  <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                  </div>
                  <div class="flex flex-col items-center justify-center mt-1.5 gap-1">
                    <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                    <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                </div>
                <div class="flex items-center justify-center">
                  <div class="size-[6px] bg-neutral-400 dark:bg-neutral-700/60 rounded-[1px]">
                  </div>
                </div>
              </div>
              <div class="flex flex-col w-full px-[6px] py-[3px]">
                <div class="w-1/4 h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                </div>
                <div class="flex items-center justify-between mt-1.5">
                  <div class="flex items-center justify-center gap-1">
                    <div class="w-[25px] h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                    <div class="w-[12px] h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                    <div class="w-[6px] h-[6px] bg-neutral-400/60 dark:bg-neutral-700/60 rounded-[1px]">
                    </div>
                  </div>
                  <div class="flex items-center justify-center gap-1">
                    <div class="w-[20px] h-[6px] bg-neutral-900/60 dark:bg-neutral-500/60 rounded-[1px]">
                    </div>
                  </div>
                </div>
                <div class="flex flex-col mt-2 gap-1.5 w-full">
                  <div class="w-full h-[8px] bg-neutral-400/20 dark:bg-neutral-700/20 border-[0.75px] border-neutral-400/70 dark:border-neutral-700/70 rounded-[1px]">
                  </div>
                  <div class="w-full h-[8px] bg-neutral-400/20 dark:bg-neutral-700/20 border-[0.75px] border-neutral-400/70 dark:border-neutral-700/70 rounded-[1px]">
                  </div>
                  <div class="w-full h-[8px] bg-neutral-400/20 dark:bg-neutral-700/20 border-[0.75px] border-neutral-400/70 dark:border-neutral-700/70 rounded-[1px]">
                  </div>
                </div>
              </div>
            </div>
            <div class="w-[60px] h-[12px] bg-neutral-200 dark:bg-neutral-900/80 rounded-[2px]">
            </div>
          </div>
        </div>
      </div>
      <div class="flex flex-col items-center justify-center gap-1 -mt-32">
        <h4 class="text-xl font-semibold z-[2]">
          Something went wrong
        </h4>
        <p class="text-sm text-neutral-500 text-center z-[2]">
          An unexpected error occured.
        </p>
        <div class="flex gap-3 mt-3 z-[2]">
          <gui-button variant="outline">
            Back
          </gui-button>
          <gui-button>
            <span>
              Dashboard
            </span>
            <gui-arrow-right-icon>
            </gui-arrow-right-icon>
          </gui-button>
        </div>
      </div>
      <div class="absolute -bottom-6 h-[150px] -left-6 -right-6 z-[1] bg-gradient-radial from-white dark:from-black dark:to-black/0 to-white/0">
      </div>
    </div>
  </section>
</div>

`;
